--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ STRETCHES=1
 SECRET_KEY="very secreto key"
 STATICFILES_PATH="../staticfiles/static"
 DATABASE_URL="postgres://kektus:kektus@localhost/kektus_development"
+
+FACEBOOK_KEY="1879934502276015"
+FACEBOOK_SECRET="338a7f00fa31e1a2a726f6cc68040637"
